[Fixes #30198303] Fix other cost without name not showing; double line bug

--- a/app/stylesheets/partials/_tables.sass
+++ b/app/stylesheets/partials/_tables.sass
@@ -196,7 +196,7 @@ table.data
       top: 4px
       &:hover
         opacity: 0.7
-        
+
   .tabs
     li
       display: inline-block
@@ -248,17 +248,17 @@ table.data
         border-bottom: none
         font-size: 12px
         font-weight: bold
-        
+
       &.sub-head
         td
-          padding: 12px 0 10px 7px
+          padding: 11px 0 9px 7px
           h4
             color: #bbb
             font-size: 10px
             line-height: 1
         &.alt td
           padding-left: 0
-          
+
       &.js_project_row a
         font-size: 12px
         font-weight: normal
@@ -266,7 +266,7 @@ table.data
         &.add_row
           font: bold 10px Arial, sans-serif
           text-decoration: none
-        
+
       &.strong td
         border-bottom: 1px solid $primary_border3
       &.big-total td
@@ -312,7 +312,7 @@ table.data
     margin-top: 8px
   td:hover .regenerate
     display: block
-      
+
   &.slim
     td, th
       padding: 7px 9px 7px 18px
@@ -324,7 +324,7 @@ tr.filler th, tr.filler td
 tr.filler2 th, tr.filler2 td
   background: $primary_lightest
   font-weight: bold
-        
+
 .am_organizations
   line-height: 18px
   th.center, td.center
